--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~7.2.8",
     "@angular/compiler": "~7.2.8",
     "@angular/core": "~7.2.8",
+    "@angular/fire": "^5.1.2",
     "@angular/flex-layout": "^7.0.0-beta.24",
     "@angular/forms": "~7.2.8",
     "@angular/material": "^7.3.3",
@@ -27,8 +28,9 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "editable-component": "0.0.1",
+    "firebase": "^5.10.1",
     "hammerjs": "^2.0.8",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.0",
     "ng-mat-search-bar": "^3.0.1",
     "ng-pick-datetime": "^7.0.0",
     "ngx-image-cropper": "^1.3.9",
